<resources>
    <string name="app_name">ArboMaisAndroid</string>
    <string name="header">Arbo+</string>
    <string name="welcome">Bem vindo ao Arbo+</string>
    <string name="name">Nome</string>
    <string name="hint_name">Digite aqui seu nome</string>
    <string name="password">Senha</string>
    <string name="hint_password">Digite aqui sua senha</string>
    <string name="login">Entrar</string>
    <string name="new_account">Criar Conta</string>
    <string name="trees_created">Árvores Cadastradas</string>
    <string name="new_tree">Nova Árvore</string>
    <string name="title_activity_arvore_list_view">arvore_list_view</string>
    <string name="empty_trees">Não há nenhuma árvore cadastrada.</string>
    <string name="back">Voltar</string>
    <string name="delete">Excluir</string>
    <string name="save">Salvar</string>
    <string name="especie">Especie</string>
    <string name="height">Altura(cm)</string>
    <string name="new_password">Nova senha</string>
    <string name="exit">Sair</string>
    <string name="add_picture">Adicionar Foto</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>