<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.arvore.ArvoreListView">

    <ImageButton
        android:id="@+id/userIcon"
        android:layout_width="49dp"
        android:layout_height="67sp"
        android:background="@color/primary"
        android:src="@drawable/baseline_account_circle_35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtVoltarArvore"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listArvore"
        android:layout_width="409dp"
        android:layout_height="450dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtVoltarArvore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:background="@color/primary"
        android:padding="16dp"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="72dp"
        android:text="@string/trees_created"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVoltarArvore" />

    <Button
        android:id="@+id/btnNovaArvore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_tree"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/userIcon" />

    <TextView
        android:id="@+id/edtTextListaArvore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="93dp"
        android:textSize="24sp"
        android:layout_marginBottom="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNovaArvore" />

</androidx.constraintlayout.widget.ConstraintLayout>